Add widget support for portrait
This CL integrates widget support into the CarLauncher for portrait configuration.

Key changes include:
*   Introduces `SnappingHorizontalScrollView` to enable snapping navigation between the media card and widgets.
*   Refactors `WidgetHostActivity` to dynamically handle layout changes and visibility states based on whether widgets are configured.
*   Updates resource dimensions and layouts to support landscape/portrait mode and ensure proper spacing and snapping behavior.
*   Customizes `CarAppWidgetHostView` to suppress default system padding, allowing for precise control over widget margins in the launcher.

Bug: 469757615
Test: manual
Flag: com.android.car.carlauncher.app_widget_host
Change-Id: I3720f902c6087cc14bf1ad4fa82927d94360df6b