@@ -16,8 +16,6 @@
 
 package com.android.car.carlauncher;
 
-import static android.app.Activity.RESULT_OK;
-
 import android.app.ActivityOptions;
 import android.appwidget.AppWidgetManager;
 import android.appwidget.AppWidgetProviderInfo;
@@ -26,11 +24,15 @@ import android.content.ComponentName;
 import android.content.Context;
 import android.content.Intent;
 import android.content.IntentFilter;
+import android.content.res.Configuration;
+import android.graphics.drawable.Drawable;
 import android.os.Bundle;
 import android.util.Log;
+import android.view.Gravity;
 import android.view.View;
 import android.view.ViewGroup;
 import android.view.ViewTreeObserver;
+import android.widget.FrameLayout;
 import android.widget.LinearLayout;
 
 import androidx.annotation.Nullable;
@@ -62,8 +64,10 @@ public class WidgetHostActivity extends AppCompatActivity {
     private static final int REQUEST_BIND = 100;
     private static final int REQUEST_CONFIGURE = REQUEST_BIND + 1;
     private static final int RESULT_SUCCESS = RESULT_OK;
-    private static final int RESULT_NEEDS_BIND = RESULT_SUCCESS + 1;
+    private static final int RESULT_ERROR = RESULT_CANCELED;
+    private static final int RESULT_NEEDS_BIND = RESULT_CANCELED + 1;
     private static final int RESULT_NEEDS_CONFIGURE = RESULT_NEEDS_BIND + 1;
+
     private final IntentHandler mIntentHandler = intent -> {
         if (intent != null) {
             ActivityOptions options = ActivityOptions.makeBasic();
@@ -89,19 +93,31 @@ public class WidgetHostActivity extends AppCompatActivity {
             }
         }
     };
-    private int mWidgetHeight;
-    private int mWidgetMediaCardHeight;
+    private int mWidgetMediaCardSize;
     private AppWidgetManager mAppWidgetManager;
     private CarAppWidgetHost mAppWidgetHost;
     private LinearLayout mWidgetContainer;
     private ViewGroup mCardContainer;
     private Set<HomeCardModule> mHomeCardModules;
+    private boolean mIsLandscape;
+    private Drawable mScrollViewBg;
+    private FrameLayout mScrollView;
+    private int mWidgetDividerSize;
+    private int mWidgetHorizontalMargin;
+    private int mWidgetVerticalMargin;
+    private int mWidgetHeight;
+    private int mWidgetWidth;
+
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
 
         getTheme().applyStyle(R.style.CarLauncherActivityThemeOverlay, true);
+
+        // TODO: b/476465227 - Use configuration rather than orientation
+        int orientation = getResources().getConfiguration().orientation;
+        mIsLandscape = orientation == Configuration.ORIENTATION_LANDSCAPE;
 
         setContentView(R.layout.widget_host_activity);
 
@@ -115,21 +131,28 @@ public class WidgetHostActivity extends AppCompatActivity {
                 getResources().getInteger(R.integer.config_appwidget_host_id));
         mWidgetContainer = findViewById(R.id.widget_container);
         mCardContainer = findViewById(R.id.card_container);
+        mScrollView = findViewById(R.id.scroll_view);
 
+        mWidgetWidth = (int) getResources().getDimension(R.dimen.widget_width);
         mWidgetHeight = (int) getResources().getDimension(R.dimen.widget_height);
-        mWidgetMediaCardHeight = (int) getResources().getDimension(
-                R.dimen.widget_media_card_height);
+        mWidgetMediaCardSize = (int) getResources().getDimension(R.dimen.widget_media_card_size);
+        mWidgetDividerSize = (int) getResources().getDimension(R.dimen.widget_divider_size);
+        mWidgetHorizontalMargin = (int) getResources().getDimension(
+                R.dimen.widget_horizontal_margin);
+        mWidgetVerticalMargin = (int) getResources().getDimension(R.dimen.widget_vertical_margin);
+
+        mScrollViewBg = getResources().getDrawable(R.drawable.scroll_view_background, getTheme());
 
         mCardContainer.getViewTreeObserver().addOnGlobalLayoutListener(
                 new ViewTreeObserver.OnGlobalLayoutListener() {
                     @Override
                     public void onGlobalLayout() {
                         mCardContainer.getViewTreeObserver().removeOnGlobalLayoutListener(this);
+
                         if (Flags.appWidgetHost()) {
                             loadAndDisplayWidgets();
                         } else {
-                            mCardContainer.getLayoutParams().height =
-                                    ViewGroup.LayoutParams.MATCH_PARENT;
+                            adjustVisuals(/* widgetAdded= */ false);
                         }
                     }
                 });
@@ -161,6 +184,11 @@ public class WidgetHostActivity extends AppCompatActivity {
     protected void onActivityResult(int requestCode, int resultCode, @Nullable Intent data) {
         super.onActivityResult(requestCode, resultCode, data);
 
+        if (data == null) {
+            Log.e(TAG, "data is null");
+            return;
+        }
+
         if (requestCode == REQUEST_BIND && resultCode == RESULT_OK) {
             int widgetId = data.getIntExtra(AppWidgetManager.EXTRA_APPWIDGET_ID, -1);
             if (widgetId == -1) {
@@ -176,15 +204,12 @@ public class WidgetHostActivity extends AppCompatActivity {
             if (appWidgetInfo.configure == null) {
                 createHostView(widgetId, appWidgetInfo);
             } else {
-                Bundle options = ActivityOptions.makeBasic()
-                        .setPendingIntentBackgroundActivityStartMode(
-                                ActivityOptions.MODE_BACKGROUND_ACTIVITY_START_ALLOW_ALWAYS
-                        )
-                        .toBundle();
+                Bundle options =
+                        ActivityOptions.makeBasic().setPendingIntentBackgroundActivityStartMode(
+                                ActivityOptions.MODE_BACKGROUND_ACTIVITY_START_ALLOW_ALWAYS)
+                                .toBundle();
                 mAppWidgetHost.startAppWidgetConfigureActivityForResult(this, widgetId,
-                        /* intentFlags= */ 0,
-                        REQUEST_CONFIGURE,
-                        options);
+                        /* intentFlags= */ 0, REQUEST_CONFIGURE, options);
             }
         } else if (requestCode == REQUEST_CONFIGURE && resultCode == RESULT_OK) {
             int widgetId = data.getIntExtra(AppWidgetManager.EXTRA_APPWIDGET_ID, -1);
@@ -203,6 +228,8 @@ public class WidgetHostActivity extends AppCompatActivity {
     }
 
     private void initializeCards() {
+        boolean isTopCardInUse = false;
+        boolean isBottomCardInUse = false;
         if (mHomeCardModules == null) {
             mHomeCardModules = new ArraySet<>();
             for (String providerClassName : getResources().getStringArray(
@@ -210,9 +237,12 @@ public class WidgetHostActivity extends AppCompatActivity {
                 try {
                     long reflectionStartTime = System.currentTimeMillis();
                     HomeCardModule cardModule = (HomeCardModule) Class.forName(
-                            providerClassName).newInstance();
+                            providerClassName).getDeclaredConstructor().newInstance();
                     if (cardModule.getCardResId() == R.id.top_card) {
-                        findViewById(R.id.top_card).setVisibility(View.GONE);
+                        isTopCardInUse = true;
+                    }
+                    if (cardModule.getCardResId() == R.id.bottom_card) {
+                        isBottomCardInUse = true;
                     }
                     cardModule.setViewModelProvider(new ViewModelProvider(/* owner= */this));
                     mHomeCardModules.add(cardModule);
@@ -221,11 +251,22 @@ public class WidgetHostActivity extends AppCompatActivity {
                         Log.d(TAG, "Initialization of HomeCardModule class " + providerClassName
                                 + " took " + reflectionTime + " ms");
                     }
-                } catch (IllegalAccessException | InstantiationException
-                         | ClassNotFoundException e) {
+                } catch (ReflectiveOperationException e) {
                     Log.w(TAG, "Unable to create HomeCardProvider class " + providerClassName, e);
                 }
             }
+        }
+        if (!isTopCardInUse) {
+            Log.e(TAG, "Top card is not supported in widget host.");
+        }
+        if (!isBottomCardInUse) {
+            View bottomCard = findViewById(R.id.bottom_card);
+            if (bottomCard != null) {
+                bottomCard.setVisibility(View.GONE);
+            }
+        }
+        if (!isBottomCardInUse && mCardContainer != null) {
+            mCardContainer.setVisibility(View.GONE);
         }
         FragmentTransaction transaction = getSupportFragmentManager().beginTransaction();
         for (HomeCardModule cardModule : mHomeCardModules) {
@@ -265,9 +306,7 @@ public class WidgetHostActivity extends AppCompatActivity {
             int result = addWidget(appWidgetId, info);
 
             switch (result) {
-                case RESULT_SUCCESS -> {
-                    widgetAdded = true;
-                }
+                case RESULT_SUCCESS -> widgetAdded = true;
                 case RESULT_NEEDS_BIND -> {
                     Intent intent = new Intent(AppWidgetManager.ACTION_APPWIDGET_BIND);
                     intent.putExtra(AppWidgetManager.EXTRA_APPWIDGET_ID, appWidgetId);
@@ -277,22 +316,17 @@ public class WidgetHostActivity extends AppCompatActivity {
                     startActivityForResult(intent, REQUEST_BIND);
                 }
                 case RESULT_NEEDS_CONFIGURE -> {
-                    Bundle options = ActivityOptions.makeBasic()
-                            .setPendingIntentBackgroundActivityStartMode(
-                                    ActivityOptions.MODE_BACKGROUND_ACTIVITY_START_ALLOW_ALWAYS
-                            )
-                            .toBundle();
+                    Bundle options =
+                            ActivityOptions.makeBasic().setPendingIntentBackgroundActivityStartMode(
+                                    ActivityOptions.MODE_BACKGROUND_ACTIVITY_START_ALLOW_ALWAYS)
+                                    .toBundle();
                     mAppWidgetHost.startAppWidgetConfigureActivityForResult(this, appWidgetId,
-                            /* intentFlags= */ 0, REQUEST_CONFIGURE,
-                            options);
+                            /* intentFlags= */ 0, REQUEST_CONFIGURE, options);
                 }
             }
         }
 
-        if (!widgetAdded) {
-            mCardContainer.getLayoutParams().height = ViewGroup.LayoutParams.MATCH_PARENT;
-        }
-        mWidgetContainer.setVisibility(widgetAdded ? View.VISIBLE : View.GONE);
+        adjustVisuals(widgetAdded);
     }
 
     private int addWidget(int appWidgetId, AppWidgetProviderInfo info) {
@@ -303,7 +337,9 @@ public class WidgetHostActivity extends AppCompatActivity {
                 return RESULT_NEEDS_CONFIGURE;
             }
 
-            createHostView(appWidgetId, info);
+            if (!createHostView(appWidgetId, info)) {
+                return RESULT_ERROR;
+            }
 
             if (DEBUG) {
                 Log.d(TAG, "Added widget with ID: " + appWidgetId + " from provider: "
@@ -312,19 +348,91 @@ public class WidgetHostActivity extends AppCompatActivity {
             return RESULT_SUCCESS;
         } else {
             if (DEBUG) {
-                Log.d(TAG, "Widget bind not allowed; with ID: " + appWidgetId + " from provider: "
-                        + info.provider);
+                Log.d(TAG, "Widget bind not allowed; with ID: " + appWidgetId
+                        + " from provider: " + info.provider);
             }
             return RESULT_NEEDS_BIND;
         }
     }
 
-    private void createHostView(int id, AppWidgetProviderInfo info) {
-        CarAppWidgetHostView hostView =
-                (CarAppWidgetHostView) mAppWidgetHost.createView(this, id, info);
-        hostView.bind(info, mCardContainer.getWidth(), mWidgetHeight);
-        mWidgetContainer.addView(hostView);
-        mCardContainer.getLayoutParams().height = mWidgetMediaCardHeight;
-        mWidgetContainer.setVisibility(View.VISIBLE);
+    private boolean createHostView(int id, AppWidgetProviderInfo info) {
+        CarAppWidgetHostView hostView = (CarAppWidgetHostView) mAppWidgetHost.createView(this, id,
+                info);
+        if (hostView == null) {
+            if (DEBUG) {
+                Log.e(TAG, "AppWidgetHostView is null; with ID: " + id + " from provider: "
+                        + info.provider);
+            }
+            return false;
+        }
+
+        FrameLayout container = new FrameLayout(this);
+        container.setPadding(mWidgetHorizontalMargin, mWidgetVerticalMargin,
+                mWidgetHorizontalMargin, mWidgetVerticalMargin);
+
+        LinearLayout.LayoutParams lp = new LinearLayout.LayoutParams(
+                ViewGroup.LayoutParams.MATCH_PARENT, ViewGroup.LayoutParams.MATCH_PARENT);
+        lp.gravity = Gravity.CENTER;
+        if (mIsLandscape) {
+            lp.width = mWidgetWidth;
+        } else {
+            lp.height = mWidgetHeight;
+        }
+
+        hostView.bind(info, mWidgetWidth, mWidgetHeight);
+
+        mWidgetContainer.addView(container, lp);
+        container.addView(hostView);
+
+        return true;
+    }
+
+    /**
+     * Adjusts the visual layout of the card container and scroll view based on whether widgets are
+     * present.
+     * <p>
+     * If no widgets are added:
+     * - In landscape: The card container is expanded to match parent width, scroll view background
+     *   is removed, and margins are reset.
+     * - In portrait: The card container height is expanded to match parent height, and margins are
+     *   adjusted.
+     * <p>
+     * If widgets are added:
+     * - In landscape: The card container width is set to a fixed size, scroll view background is
+     *   applied, and margins are set.
+     * - In portrait: The card container height is set to a fixed size.
+     *
+     * @param widgetAdded True if at least one widget has been added, false otherwise.
+     */
+    private void adjustVisuals(boolean widgetAdded) {
+        ViewGroup.MarginLayoutParams cardContainerLp =
+                (ViewGroup.MarginLayoutParams) mCardContainer.getLayoutParams();
+        ViewGroup.MarginLayoutParams scrollViewLp =
+                (ViewGroup.MarginLayoutParams) mScrollView.getLayoutParams();
+        if (!widgetAdded) {
+            if (mIsLandscape) {
+                mCardContainer.getLayoutParams().width = ViewGroup.LayoutParams.MATCH_PARENT;
+                mScrollView.setBackground(null);
+                cardContainerLp.setMargins(0, 0, 0, 0);
+            } else {
+                mCardContainer.getLayoutParams().height = ViewGroup.LayoutParams.MATCH_PARENT;
+                cardContainerLp.setMargins(mWidgetDividerSize, 0, mWidgetDividerSize, 0);
+            }
+            scrollViewLp.setMargins(0, 0, 0, 0);
+        } else {
+            if (mIsLandscape) {
+                mCardContainer.getLayoutParams().width = mWidgetMediaCardSize;
+                mScrollView.setBackground(mScrollViewBg);
+                scrollViewLp.setMargins(mWidgetDividerSize, mWidgetDividerSize, mWidgetDividerSize,
+                        mWidgetDividerSize);
+            } else {
+                mCardContainer.getLayoutParams().height = mWidgetMediaCardSize;
+            }
+            cardContainerLp.setMargins(mWidgetHorizontalMargin, mWidgetVerticalMargin,
+                    mWidgetHorizontalMargin, mWidgetVerticalMargin);
+        }
+        mCardContainer.setLayoutParams(cardContainerLp);
+        mScrollView.setLayoutParams(scrollViewLp);
+        mScrollView.requestLayout();
     }
 }
